--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<h1>
-  {{title}}
-</h1>
+
 <app-navbar></app-navbar>
-<events-list></events-list>
+<router-outlet></router-outlet>
 <!--Component will not load if you not register it in app.module.ts-->
